--- a/indeks.html
+++ b/indeks.html
@@ -8,5 +8,6 @@
         <img id="profile-image" src="aul.png" alt="profile image">
         <h2 id="profile-name">Dia auliani</h2>
     </div>
+    <div id="footer">Footer</div>
     </body>
 </html>
