menambah profile job

--- a/indeks.html
+++ b/indeks.html
@@ -8,6 +8,7 @@
         <div id="profile-container">
         <img id="profile-image" src="aul.png" alt="profile image">
         <h2 id="profile-name">Dia auliani</h2>
+        <p id="profil-job">Software Engineer</p>
     </div>
     <div id="footer">Footer</div>
     </body>
